# deployment-tools

./: Build.proj  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NuGet.config  README.md  azure-pipelines-PR.yml  azure-pipelines.yml  global.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/policies/: untriaged.yml
.github/workflows/: labeler-cache-retention.yml  labeler-predict-issues.yml  labeler-predict-pulls.yml  labeler.md
Documentation/dotnet-mage/: ApplicationDeployment.cs  README.md
eng/: Analyzers.props  Configurations.props  Publishing.props  SignCheckExclusionsFile.txt  Signing.props  SourceBuild.props  SourceBuildPrebuiltBaseline.xml  Subsets.props  Version.Details.props  Version.Details.xml  Versions.props  build.ps1  build.sh  empty.csproj  liveBuilds.targets
eng/common/: tools.sh  vmr-sync.sh
eng/jobs/: bash-build.yml  prepare-signed-artifacts.yml  run-publish-project.yml  windows-build-PR.yml  windows-build.yml
eng/stages/: publish.yml
src/: prepare-artifacts.proj
src/DotNetRuntimeValidation/: Directory.Build.targets  DotNetRuntimeValidation.csproj
src/clickonce/native/projects/NetCoreCheck/: CMakeLists.txt  Logger.cpp  Logger.h  NetCoreCheck.cpp  NetCoreCheck.h  TempRuntimeConfigFile.cpp  TempRuntimeConfigFile.h  version_info.h
src/clickonce/native/projects/NetCoreCheck/CA/: MsiLogger.cpp  MsiLogger.h  MsiWrapper.cpp  MsiWrapper.h  NetCoreCheckCA.cpp  version_info.h
src/clickonce/native/projects/NetCoreCheck/EXE/: FileLogger.cpp  NetCoreCheckExe.cpp  version_info.h
(+198 files in other folders)
